# ltl_automaton_turtlebot

./: CMakeLists.txt  README.md  package.xml
config/: example_ts.yaml  turtlebot_ltl_formula.yaml  turtlebot_ts.yaml
config/navigation/: costmap_common.yaml  local_costmap_static.yaml  planner.yaml
launch/: ltl_turtlebot.launch  ltl_turtlebot_simple_example.launch  turtlebot_mocap_navigation.launch  turtlebot_move_base.launch
src/: ltl_automaton_turtlebot_node.py  turtlebot_load_monitor.py
