<?xml version="1.0"?>
<package format="2">
  <name>ltl_automaton_turtlebot</name>
  <version>0.0.0</version>
  <description>Provides integration of Turtlebot2 with LTL automaton package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="smladmin@todo.todo">smladmin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ltl_autmaton_msgs</build_depend>
  <build_depend>ltl_automaton_std_transition_systems</build_depend>
  <build_export_depend>ltl_autmaton_msgs</build_export_depend>
  <build_export_depend>ltl_automaton_std_transition_systems</build_export_depend>
  <exec_depend>ltl_autmaton_msgs</exec_depend>
  <exec_depend>ltl_automaton_std_transition_systems</exec_depend>

</package>
